small fix for mobile, removed plceholder from select input and from test to align with sketch

--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -3,10 +3,13 @@
 .subtype-input-container {
   display: flex;
 
+  .column {
+    margin-right: 5rem;
+  }
   span {
     position: relative;
-    right: 45px;
-    top: 10px;
+    left: 24px;
+    top: -10px;
     font-size: 16px;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
